fix hide time on small devices

--- a/src/sass/_app.elements.scss
+++ b/src/sass/_app.elements.scss
@@ -30,6 +30,16 @@ fieldset {
 table {
   width: 100%;
 
+  @include breakpoint(small) {
+    td.time{
+      display:none;
+      width:0;
+      height:0;
+      opacity:0;
+      visibility: collapse;
+    }
+  }
+
   thead {
     font-weight: bold;
   }
